# cpp-mirai-client

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AppMessage_8cpp.html  AppMessage_8cpp__incl.map  AppMessage_8cpp__incl.md5  AppMessage_8cpp_source.html  AppMessage_8hpp.html  AppMessage_8hpp.js  AppMessage_8hpp__dep__incl.map  AppMessage_8hpp__dep__incl.md5  AppMessage_8hpp__incl.map  AppMessage_8hpp__incl.md5  AppMessage_8hpp_source.html  AtAllMessage_8cpp.html  AtAllMessage_8cpp__incl.map  AtAllMessage_8cpp__incl.md5  AtAllMessage_8cpp_source.html  AtAllMessage_8hpp.html  AtAllMessage_8hpp.js  AtAllMessage_8hpp__dep__incl.map  AtAllMessage_8hpp__dep__incl.md5  AtAllMessage_8hpp__incl.map  AtAllMessage_8hpp__incl.md5  AtAllMessage_8hpp_source.html  AtMessage_8cpp.html  AtMessage_8cpp__incl.map  AtMessage_8cpp__incl.md5  AtMessage_8cpp_source.html  AtMessage_8hpp.html  AtMessage_8hpp.js  AtMessage_8hpp__dep__incl.map  AtMessage_8hpp__dep__incl.md5  AtMessage_8hpp__incl.map  AtMessage_8hpp__incl.md5  AtMessage_8hpp_source.html  AudioMessage_8cpp.html  AudioMessage_8cpp__incl.map  AudioMessage_8cpp__incl.md5  (+2378 more)
UnitTest/: CMakeLists.txt  ClientTest.cpp  CustomAdaptor.hpp  EventsTest.cpp  HttpClientTest.cpp  JsonData.hpp  MessageClientTest.cpp  MessagesTest.cpp  MockTest.cpp  TypesTest.cpp  UtilsTest.cpp
examples/: CMakeLists.txt  config_template.json  config_template.toml  echo.cpp
libmirai/: CMakeLists.txt
libmirai/aggregate/: CMakeLists.txt
libmirai/aggregate/libmirai/: mirai.hpp
libmirai/aggregates/: CMakeLists.txt
libmirai/aggregates/libmirai/: mirai.hpp  models.hpp
libmirai/aggregates/libmirai/Events/: Events.hpp
libmirai/aggregates/libmirai/Messages/: Messages.hpp
libmirai/aggregates/libmirai/Types/: Types.hpp
libmirai/api/: CMakeLists.txt
libmirai/api/libmirai/: Client.cpp  Client.hpp
libmirai/api/libmirai/Adaptors/: GMockAdaptor.hpp  HttpWsAdaptor.hpp  IAdaptor.hpp
libmirai/api/libmirai/Client/: Client.cpp  Client.hpp
libmirai/details/: CMakeLists.txt
libmirai/details/libmirai/AdaptorImpl/: CMakeLists.txt  HttpWsAdaptor.cpp  HttpWsAdaptor.hpp
libmirai/details/libmirai/Api/: CMakeLists.txt  HttpClientImpl.hpp  MessageClientImpl.hpp
libmirai/details/libmirai/Impl/: HttpClientImpl.cpp  HttpClientImpl.hpp  MessageClientImpl.cpp  MessageClientImpl.hpp
libmirai/details/libmirai/Serialization/: CMakeLists.txt
libmirai/details/libmirai/Utils/: CMakeLists.txt  Common.hpp  Factory.hpp  ThreadPool.hpp
libmirai/mock/: CMakeLists.txt
libmirai/mock/libmirai/: Client.cpp  Client.hpp
libmirai/mock/libmirai/MockApi/: CMakeLists.txt  MockClient.cpp
libmirai/models/: CMakeLists.txt
libmirai/models/libmirai/: mirai.hpp  models.hpp
libmirai/models/libmirai/Events/: BotEvent.hpp  BotEvents.hpp  BotGroupPermissionChangeEvent.hpp  BotInvitedJoinGroupRequestEvent.hpp  BotJoinGroupEvent.cpp  BotJoinGroupEvent.hpp  BotLeaveEventActive.hpp  BotLeaveEventDisband.hpp  BotLeaveEventKick.hpp  BotMuteEvent.hpp  BotOfflineEventActive.hpp  BotOfflineEventDropped.hpp  BotOfflineEventForce.hpp  BotOnlineEvent.hpp  BotReloginEvent.hpp  BotUnmuteEvent.cpp  BotUnmuteEvent.hpp  CMakeLists.txt  CommandExecutedEvent.cpp  CommandExecutedEvent.hpp  EventBase.hpp  Events.hpp  FriendEvents.hpp  FriendInputStatusChangedEvent.hpp  FriendMessageEvent.cpp  FriendMessageEvent.hpp  FriendNickChangedEvent.cpp  FriendNickChangedEvent.hpp  FriendRecallEvent.cpp  FriendRecallEvent.hpp  FriendSyncMessageEvent.hpp  GroupAllowAnonymousChatEvent.hpp  GroupAllowConfessTalkEvent.cpp  GroupAllowConfessTalkEvent.hpp  GroupAllowMemberInviteEvent.cpp  GroupAllowMemberInviteEvent.hpp  GroupEntranceAnnouncementChangeEvent.cpp  GroupEntranceAnnouncementChangeEvent.hpp  GroupEvents.hpp  GroupMessageEvent.cpp  (+43 more)
libmirai/models/libmirai/Exceptions/: Exceptions.hpp
libmirai/models/libmirai/Messages/: AppMessage.cpp  AppMessage.hpp  AtAllMessage.hpp  AtMessage.cpp  AtMessage.hpp  AudioMessage.cpp  AudioMessage.hpp  CMakeLists.txt  DiceMessage.hpp  FaceMessage.cpp  FaceMessage.hpp  FileMessage.hpp  FlashImageMessage.cpp  FlashImageMessage.hpp  ForwardMessage.cpp  ForwardMessage.hpp  ForwardMessageNode.hpp  IMessage.hpp  ImageMessage.hpp  JsonMessage.cpp  JsonMessage.hpp  MarketFaceMessage.cpp  MarketFaceMessage.hpp  MessageBase.hpp  MessageChain.cpp  MessageChain.hpp  Messages.hpp  MiraiCodeMessage.cpp  MiraiCodeMessage.hpp  MusicShareMessage.hpp  PlainMessage.cpp  PlainMessage.hpp  PokeMessage.cpp  PokeMessage.hpp  QuoteMessage.cpp  QuoteMessage.hpp  SourceMessage.cpp  SourceMessage.hpp  XmlMessage.cpp  XmlMessage.hpp
libmirai/models/libmirai/Types/: BasicTypes.cpp  BasicTypes.hpp  CMakeLists.txt  EventTypes.hpp  GroupSettings.cpp  GroupSettings.hpp  MediaTypes.cpp  MediaTypes.hpp  MessageTypes.hpp  NudgeTarget.hpp  Serializable.cpp  Serializable.hpp  Types.hpp
libmirai/models/libmirai/Utils/: Logger.hpp  SessionConfig.cpp  SessionConfig.hpp
libmirai/private/libmirai/Impl/: HttpClientImpl.cpp  HttpClientImpl.hpp  MessageClientImpl.cpp  MessageClientImpl.hpp
libmirai/private/libmirai/Utils/: Common.cpp  Common.hpp  Factory.hpp  ThreadPool.hpp
libmirai/public/: CMakeLists.txt
libmirai/public/libmirai/: mirai.hpp
libmirai/public/libmirai/Api/: CMakeLists.txt  Client.cpp  Client.hpp  SessionConfig.cpp  SessionConfig.hpp
libmirai/public/libmirai/Events/: BotEvent.cpp  BotEvent.hpp  BotGroupPermissionChangeEvent.cpp  BotGroupPermissionChangeEvent.hpp  BotInvitedJoinGroupRequestEvent.cpp  BotInvitedJoinGroupRequestEvent.hpp  BotJoinGroupEvent.cpp  BotJoinGroupEvent.hpp  BotLeaveEventActive.cpp  BotLeaveEventActive.hpp  BotLeaveEventDisband.cpp  BotLeaveEventDisband.hpp  BotLeaveEventKick.cpp  BotLeaveEventKick.hpp  BotMuteEvent.cpp  BotMuteEvent.hpp  BotOfflineEventActive.hpp  BotOfflineEventDropped.hpp  BotOfflineEventForce.hpp  BotOnlineEvent.hpp  BotReloginEvent.hpp  BotUnmuteEvent.cpp  BotUnmuteEvent.hpp  CommandExecutedEvent.cpp  CommandExecutedEvent.hpp  EventBase.hpp  Events.hpp  FriendInputStatusChangedEvent.cpp  FriendInputStatusChangedEvent.hpp  FriendMessageEvent.cpp  (+64 more)
(+375 files in other folders)
